# proxxx

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THREAT_MODEL.md  bootstrap.md  deny.toml  features.md  guide.md  rust-toolchain.toml
.cargo/: audit.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: automerge-update-branch.yml  ci.yml  cloudimg-repin.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
assets/: README.md  build.py  demo-gitops.toml  demo-homelab.toml  demo-incident.toml  demo-mcp.toml
benches/: fuzzy_search.rs  serde_parse.rs  snaptree_assemble.rs
benches/common/: mod.rs
benches/fixtures/: README.md
docs/: AUDIT-2026-05-20.md  cli-contract.md  cluster_smoke.md  config.example.toml  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  style.css
docs/architecture/: elm-pattern.md  error-handling.md  overview.md  security.md
docs/guide/: bypass-policy.md  configuration.md  installation.md  pre-commit-gate.md  production-checklist.md  quick-start.md  quickstart-homelab.md  quickstart-llm-mcp.md  troubleshooting.md
docs/integrations/: alerts.md  console.md  hitl.md  mcp.md  pbs.md  pve.md
docs/reference/: cli.md  configuration.md  errors.md  exit-codes.md  tui.md
pre-commit/: 01-feature-coverage.md  02-error-handling.md  03-security-invariants.md  04-resilience-and-chaos.md  04-resiliency-and-chaos.md  ACCEPTED-RISKS.md
proptest-regressions/app/: snaptree.txt
proptest-regressions/audit/: mod.txt
proptest-regressions/cli/: access.txt
scripts/: README.md  gate.sh  repin-cloudimg.py
src/: app.rs  console_record.rs  lib.rs  main.rs
src/access/: mod.rs  pveum.rs
src/alerts/: dedup.rs  engine.rs  mod.rs  notifier.rs  types.rs
src/api/: auth.rs  client.rs  error.rs  mod.rs  tls_pin.rs  transport.rs  types.rs
src/api/types/: access.rs  acme.rs  backup.rs  cluster.rs  console.rs  firewall.rs  guest.rs  guest_agent.rs  ha.rs  mod.rs  node.rs  node_hw.rs  notifications.rs  pool.rs  replication.rs  storage.rs  task.rs
src/app/: cache.rs  ha.rs  hw.rs  iso_library.rs  patch.rs  preflight.rs  queue.rs  search.rs  snaptree.rs
src/audit/: mod.rs
src/cli/: access.rs  accounting.rs  anomaly.rs  audit_cmd.rs  backup_verify.rs  cloudimg.rs  cluster.rs  common.rs  console.rs  ct.rs  daemon.rs  describe.rs  doctor.rs  events.rs  explain.rs  fanout.rs  firewall.rs  gpu_passthrough.rs  heatmap.rs  import_vm.rs  incident.rs  init.rs  init_wizard.rs  logs.rs  migrate_progress.rs  mod.rs  monitoring.rs  node.rs  patch.rs  reconcile.rs  schedule.rs  state.rs  storage.rs  upgrade_check.rs  vm.rs  watch.rs  yes_gate_net.rs
src/config/: mod.rs  watcher.rs
src/handoff/: launcher.rs  mod.rs  novnc.rs  spice.rs
src/hitl/: daemon.rs  hmac_key.rs  mod.rs  pending.rs  policy.rs  telegram.rs
src/incident/: mod.rs
src/mcp/: dispatch.rs  http_server.rs  mod.rs  notifications.rs  server.rs  tools.rs
src/metrics/: mod.rs
src/pbs/: client.rs  mod.rs  restore.rs  types.rs
src/ssh/: exec.rs  known_hosts.rs  mod.rs  pty.rs  session.rs
src/state/: apply.rs  converge.rs  diff.rs  export.rs  mod.rs  model.rs  preflight.rs  test_support.rs
src/tui/: event.rs  mod.rs  ssh_handler.rs  terminal_guard.rs  theme.rs
src/tui/fleet/: mod.rs  view.rs  worker.rs
src/tui/views/: approval.rs  backup.rs  compare.rs  dashboard.rs  grep.rs  guests.rs  ha_console.rs  hardware.rs  heatmap.rs  iso_library.rs  mod.rs  nodes.rs  queue.rs  search.rs  snaptree.rs  ssh_session.rs  storage.rs  tasks.rs  timeline.rs
src/tui/widgets/: input_bar.rs  mod.rs  modal.rs  pty.rs  status_footer.rs
src/util/: format.rs  mod.rs  panic_hook.rs  sanitize.rs  secret.rs  shutdown.rs  sparkline.rs  spawn_traced.rs
src/wsterm/: mod.rs  tls.rs  url.rs
tests/: api_test.rs  app_test.rs  audit_verify_e2e.rs  config_reload_e2e.rs  console_test.rs  docs_consistency_test.rs  e2e.env.example  e2e_alpha.rs  e2e_beta.rs  error_handling_e2e.rs  feature_coverage_live.rs  fleet_test.rs  hitl_e2e.rs  hitl_test.rs  init_multiprofile_test.rs  mcp_security_e2e.rs  mcp_test.rs  panic_hook_test.rs  pbs_test.rs  proxmox_map_coverage.rs  queue_failsafe_test.rs  rbac_e2e.rs  rbac_live.rs  resilience_chaos_e2e.rs  secret_redaction_test.rs  ssh_live.rs  tui_keymap_e2e.rs  tui_snapshot.rs
tests/common/: mod.rs
tests/fixtures/: proxmox_map.json  setup_rbac.sh
tests/live/: README.md  env.local.example  setup_demo.sh  test_fleet_readonly.sh  test_mutation.sh  test_pbs_backup_restore.sh  test_reconcile_converge.sh  test_run.sh  test_state_ha_rules.sh  test_state_mappings.sh
tests/snapshots/: proxmox_map_coverage__proxmox_map_coverage_snapshot.snap  tui_snapshot__approval_view_empty_state.snap  tui_snapshot__backup_view_empty_state.snap  tui_snapshot__compare_view_with_two_selected_guests.snap  tui_snapshot__dashboard_empty_cluster_does_not_panic_and_shows_idle_state.snap  tui_snapshot__dashboard_with_two_nodes_aggregates_correctly.snap  tui_snapshot__fleet_view_renders_reachable_and_down_clusters.snap  tui_snapshot__grep_view_empty_state.snap  tui_snapshot__guests_table_with_mixed_status.snap  tui_snapshot__ha_console_view_empty_state.snap  tui_snapshot__hardware_view_empty_state.snap  tui_snapshot__heatmap_view_empty_state.snap  tui_snapshot__help_overlay_renders_keymap.snap  tui_snapshot__iso_library_view_empty_state.snap  tui_snapshot__nodes_view_with_quorum_and_stale_stats_badges.snap  tui_snapshot__queue_view_empty_state.snap  tui_snapshot__search_view_empty_state.snap  tui_snapshot__snaptree_view_empty_state.snap  tui_snapshot__ssh_session_connecting_placeholder.snap  tui_snapshot__ssh_session_finished_placeholder.snap  tui_snapshot__ssh_session_with_pty_content.snap  tui_snapshot__storage_view_empty_state.snap  tui_snapshot__tasks_view_empty_state.snap  tui_snapshot__timeline_view_empty_state.snap
